Optimize code readability + bug fixes
HFP-1174

--- a/h5p-editor-range-list.css
+++ b/h5p-editor-range-list.css
@@ -26,8 +26,6 @@
   font-size: 14px;
   padding: 0 20px;
   margin-left: 1em;
-  height: auto;
-  line-height: 1;
   height: 42px;
   line-height: 42px;
 
